
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ drawData; } ;
typedef int Object ;
typedef TYPE_1__ Meter ;


 int AllCPUsMeter_getRange (TYPE_1__*,int*,int*) ;
 int Meter_delete (int *) ;

__attribute__((used)) static void AllCPUsMeter_done(Meter* this) {
   Meter** meters = (Meter**) this->drawData;
   int start, count;
   AllCPUsMeter_getRange(this, &start, &count);
   for (int i = 0; i < count; i++)
      Meter_delete((Object*)meters[i]);
}
